# ai-course

./: .env.sample  .gitignore  README.md  docker-compose.yml  init-db.sql  langgraph.json  pyproject.toml
aicourse/chatbot/: conversation_bot.py  simple_example.py
aicourse/evaluation/: youtube_summarizer.py
aicourse/evaluation/evaluators/: eval_emojis.py  eval_summaries.py  langsmith_dataset_creator.py
aicourse/evaluation/prompts/: summarize_transcript.py
aicourse/evaluation/transcription/: deepgram_audio_transcription.py  get_youtube_audio.py
aicourse/evaluation/transcripts/: Chat With Your PDFs： Part 1 - An End to End LangChain Tutorial.txt  Chat With Your PDFs： Part 2 - Frontend - An End to End LangChain Tutorial.txt  Unlock Advanced RAG Secrets： LangChain Tutorial Finale.txt
aicourse/prompt_engineering/: GENERIC_RESULT_MARKDOWN.md  advertising_costar.py  costar_prompt_engineering.py  few_shot_learning.py  national_parks.py  output_formats.py  prompt_playground.py
aicourse/prompt_engineering/prompts/: costar_prompt.py  generic_prompt_ads.py
aicourse/prompt_engineering/prompts/advertising/: costar_prompt_ads.py
aicourse/prompt_engineering/prompts/national_parks/: generic_prompt.py
src/chatbot/: __init__.py  conversation_bot.py  langgraph.json  profile_conversation_bot.py  simple_example.py  simple_vector_store.py  state.py
src/chatbot/graph/: __init__.py  conversation_graph.py  profile_graph.py
src/chatbot/nodes/: __init__.py  profile_retrieval.py  profile_storage.py  respond.py  retrieval.py  routing.py  storage.py
src/evaluation/: youtube_summarizer.py
src/evaluation/evaluators/: eval_summaries.py
src/evaluation/transcription/: deepgram_audio_transcription.py
src/evaluation/transcripts/: Unlock the Power of LangChain： Deploying to Production Made Easy.txt
src/prompt_engineering/: advertising_costar.py  few_shot_learning.py  national_parks.py  output_formats.py
