[tool.poetry]
name = "aicourse"
version = "0.1.0"
description = ""
authors = ["Sarah Kainec <Sarah.Kainec@focusedlabs.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.12"
langsmith = "^0.1.104"
deepgram-sdk = "^3.10.0"
yt-dlp = "^2025.1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

